2006-03-31	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_button_release_event): Use button
	  release to easily alter the selection even if all visible rows are
	  selected in possible preparation for a drag operation.

2006-03-30	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c: Implement "Right Arrow Keyboard Navigation" for
	  ExoIconView, as requested by Jannis. Bug #1623.

2006-03-21	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Do not
	  mess up with double click events.

2006-03-18	Benedikt Meurer <benny@xfce.org>

	* THANKS: Add translator credits for Andrey Fedoseev
	  <andrey.fedoseev@gmail.com>.

2006-03-16	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Allow to
	  alter selection using Ctrl+button/Shift+button.

2006-03-16	Benedikt Meurer <benny@xfce.org>

	* exo/exo-tree-view.c(exo_tree_view_button_press_event): Use a simple 
	  optimization here.

2006-03-11	Benedikt Meurer <benny@xfce.org>

	* exo-helper/helpers/sylpheed-claws.desktop.in,
	  exo-helper/helpers/Makefile.am: Add Sylpheed Claws as MailReader to
	  the helper list. Thanks to Bernhard Walle <bernhard.walle@gmx.de>.

2006-03-11	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_row_deleted): Use next/prev item (if
	  any) as cursor/anchor when a row is deleted from the model. Else if
	  the deleted item was the last item, reset anchor/cursor.

2006-03-08	Benedikt Meurer <benny@xfce.org>

	* exo/exo-icon-view.c(exo_icon_view_set_model): Always schedule a
	  relayout here.
	* exo/exo-icon-view.c: Apply the scroll_to_path in the expose event
	  handler rather than the size_allocate.

2006-03-06	Benedikt Meurer <benny@xfce.org>

	* autogen.sh, configure.in.in, po/LINGUAS: Read the set of available
	  languages from po/LINGUAS and substitute them when autogen.sh is
	  run. This way we can continue to use glib-gettext.
