@@ -9,7 +9,7 @@
 <refentry id="exo-open">
   <refmeta>
     <refentrytitle>exo-open</refentrytitle>
-    <manvolume>1</manvolume>
+    <manvolnum>1</manvolnum>
   </refmeta>
 
   <refnamediv>
